Fix sticky positioning and off-screen bugs for row slider menus

--- a/static/style.css
+++ b/static/style.css
@@ -703,7 +703,7 @@ th[data-sorted="true"][data-sorted-direction="descending"]::after {
     
     /* Slider mechanics */
     .actions-cell, .version-cell {
-        position: absolute;
+        position: sticky;
         right: 0;
         top: 0;
         height: 100%;
